[gd_scene load_steps=3 format=3 uid="uid://brp0l3ldv6jxe"]

[ext_resource type="Script" uid="uid://d3ji6fe3ehvvl" path="res://scenes/day_03/level_01/enemies/hive.gd" id="1_y5hvm"]
[ext_resource type="PackedScene" uid="uid://bqgvcndlue3si" path="res://scenes/day_03/level_01/enemies/hive_drone.tscn" id="2_5k2f8"]

[node name="Hive" type="Node2D"]
physics_interpolation_mode = 2
script = ExtResource("1_y5hvm")
metadata/_edit_lock_ = true

[node name="Body" type="Node2D" parent="."]
metadata/_edit_lock_ = true

[node name="HiveDrone00" parent="Body" instance=ExtResource("2_5k2f8")]
position = Vector2(3, 0)
metadata/_edit_lock_ = true

[node name="HiveDrone01" parent="Body" instance=ExtResource("2_5k2f8")]
position = Vector2(22, 0)
metadata/_edit_lock_ = true

[node name="HiveDrone02" parent="Body" instance=ExtResource("2_5k2f8")]
position = Vector2(41, 0)
metadata/_edit_lock_ = true

[node name="HiveDrone03" parent="Body" instance=ExtResource("2_5k2f8")]
position = Vector2(11, 16)
metadata/_edit_lock_ = true

[node name="HiveDrone04" parent="Body" instance=ExtResource("2_5k2f8")]
position = Vector2(0, 16)
metadata/_edit_lock_ = true

[node name="HiveDrone05" parent="Body" instance=ExtResource("2_5k2f8")]
position = Vector2(44, 16)
metadata/_edit_lock_ = true

[node name="HiveDrone06" parent="Body" instance=ExtResource("2_5k2f8")]
position = Vector2(33, 16)
metadata/_edit_lock_ = true

[node name="HiveDrone07" parent="Body" instance=ExtResource("2_5k2f8")]
position = Vector2(6, 32)
metadata/_edit_lock_ = true

[node name="HiveDrone08" parent="Body" instance=ExtResource("2_5k2f8")]
position = Vector2(22, 32)
metadata/_edit_lock_ = true

[node name="HiveDrone09" parent="Body" instance=ExtResource("2_5k2f8")]
position = Vector2(38, 32)
metadata/_edit_lock_ = true

[node name="BottomRight" type="Marker2D" parent="Body"]
position = Vector2(60, 32)
metadata/_edit_lock_ = true

[node name="MovementTimer" type="Timer" parent="."]
process_callback = 0
one_shot = true

[node name="GunTimer" type="Timer" parent="."]
process_callback = 0
one_shot = true

[connection signal="timeout" from="MovementTimer" to="." method="_on_movement_timer_timeout"]
[connection signal="timeout" from="GunTimer" to="." method="_on_gun_timer_timeout"]
